# aiida-amneris

./: README.md  pyproject.toml
src/: app.py
src/aiida_amneris/: computational_resource.py  control.py  utils.py
